# Neo

./: .gitignore  README.md  pyproject.toml  setup.py
app/: app.py
auto_driver_example/: README.md  globals.py  line_utils.py  main.py  main_hailo.py  pid.py
examples/: 1_1_omni_move.py  1_2_rotate_and_move.py  1_3_drift.py  2_1_compass.py  2_2_compass_calibration.py  2_3_accelerometer_and_gyroscope.py  2_4_imu_attitude_angle.py  2_5_move_with_pid.py  3_1_rgb_strip.py  4_1_ir_obstacle.py  4_2_utrasonic.py  4_3_obstacle_avoidance.py  4_4_obstacle_following.py  5_1_graysacle_module.py  5_2_line_track.py  6_1_camera_display.py  6_1_imu_read.py  6_2_gimbal_camera.py  6_3_color_track.py  6_4_face_track.py  6_6_mediapipe_object_detection.py  7_1_speaker.py  7_2_sound_record_and_play.py  7_3_offline_tts.py  8_1_speaker.py
examples/calibration/: calibration.py
gpt_example/: README.md  gpt_car.py  openai_helper.py  preset_actions.py  tts_test.py  utils.py
gpt_examples/: gpt_car.py
hailo/: README.md
neo/: __init__.py  compass.py  neo.py  rgb_strip.py  sh3001.py  utils.py
zeus_pi/: __init__.py  compass.py  rgb_strip.py  sh3001.py  zeus_pi.py
